# lidar_sonar_mapping

./: .gitignore  README.md  docker-compose.yml  dockerfile  ros_entrypoint.sh
3d_sonar/3d-acoustic-mapping/: Dockerfile  Dockerfile_build_opencv  README.md  docker-compose.yaml  ros_entrypoint.sh  rtps_udp_profile.xml
3d_sonar/3d-acoustic-mapping/ros2_ws/: .gitignore  install.sh
3d_sonar/3d-acoustic-mapping/ros2_ws/src/apl_msgs/: .gitlab-ci.yml  CMakeLists.txt  package.xml
3d_sonar/3d-acoustic-mapping/ros2_ws/src/cfar/: CMakeLists.txt  package.xml
3d_sonar/3d-acoustic-mapping/ros2_ws/src/marine_acoustic_msgs/: CMakeLists.txt  package.xml
3d_sonar/3d-acoustic-mapping/ros2_ws/src/marine_acoustic_msgs/msg/: DetectionFlag.msg  PingInfo.msg  ProjectedSonarImage.msg  SonarDetections.msg
3d_sonar/3d-acoustic-mapping/ros2_ws/src/pcl_merger/: setup.cfg
3d_sonar/3d-acoustic-mapping/ros2_ws/src/pcl_merger/pcl_merger/: pcl2.py  transform_tools.py
3d_sonar/3d-acoustic-mapping/ros2_ws/src/sonar3d_reconstruction/: setup.cfg
3d_sonar/3d-acoustic-mapping/ros2_ws/src/sonar3d_reconstruction/config/: params_edge_horizontal.yaml  params_edge_vertical.yaml  params_edge_vertical_pool.yaml  params_patch.yaml  params_sim.yaml
3d_sonar/3d-acoustic-mapping/ros2_ws/src/sonar3d_reconstruction/launch/: acoustic3d_launch.py
3d_sonar/3d-acoustic-mapping/ros2_ws/src/sonar3d_reconstruction/sonar3d_reconstruction/: Pool3D.py  acoustic3d_edge.py  acoustic3d_patch.py  edge_detection.py  patch_detection.py  profile.py  sonar_to_pointcloud.py  testing.ipynb  transform_tools.py
lio-sam/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
lio-sam/ros2_ws/launch/: gps_imu_localization.launch.py  lio_sam_fusion.launch.py
lio-sam/ros2_ws/src/gps_odometry/: package.xml  setup.py
lio-sam/ros2_ws/src/gps_odometry/gps_odometry/: gps_odometry.py
lio-sam/ros2_ws/src/gps_path/: package.xml  setup.py
lio-sam/ros2_ws/src/gps_path/gps_path/: ekf_path.py  gps_path.py
lio-sam/ros2_ws/src/kalman_filter/: package.xml  setup.py
lio-sam/ros2_ws/src/kalman_filter/kalman_filter/: gnss_imu_filter.py  test_kalman.py
lio-sam/ros2_ws/src/kalman_filter/kalman_filter/filters/: filter.py
lio-sam/ros2_ws/src/tf_rebroadcaster/: package.xml  setup.cfg  setup.py
lio-sam/ros2_ws/src/tf_rebroadcaster/tf_rebroadcaster/: imu_lidar_transform.py  imu_rep_transform.py
seabed_to_sky/: Dockerfile  docker-compose.yaml  requirements.txt
seabed_to_sky/ros2_ws/src/: .gitignore  play_bag.txt
seabed_to_sky/ros2_ws/src/apl_msgs/: README.md  apl_msgs.repos
seabed_to_sky/ros2_ws/src/cfar/cfar/: CFAR.py
seabed_to_sky/ros2_ws/src/cfar/src/: cfar.cpp  match.cpp
seabed_to_sky/ros2_ws/src/marine_acoustic_msgs/: CHANGELOG.rst  README.md
seabed_to_sky/ros2_ws/src/marine_acoustic_msgs/msg/: Dvl.msg  RawSonarImage.msg  SonarImageData.msg  SonarRanges.msg
seabed_to_sky/ros2_ws/src/pcl_merger/: package.xml  setup.py
seabed_to_sky/ros2_ws/src/pcl_merger/config/: params.yaml
seabed_to_sky/ros2_ws/src/pcl_merger/pcl_merger/: add_sonars_to_lidar.py
seabed_to_sky/ros2_ws/src/sonar3d_reconstruction/: package.xml  setup.py
seabed_to_sky/ros2_ws/src/sonar3d_reconstruction/config/: mcap_config.yaml  params_edge_horizontal_pool.yaml  params_edge_oculus.yaml  params_pool.yaml  qos-override.yaml
seabed_to_sky/ros2_ws/src/sonar3d_reconstruction/launch/: acoustic3d_launch.py
seabed_to_sky/ros2_ws/src/sonar3d_reconstruction/sonar3d_reconstruction/: __init__.py  get_points.py  load_data.py  optitrack_to_ros.py  plot_tools.py  process_sonar_image.py  testing.ipynb  unpack_usv_bag.py
seabed_to_sky/ros2_ws/src/spark-fast-lio/saved_maps/: fused.pcd  lidar_map.pcd  lidar_map_20260130_080909.pcd  lidar_map_20260130_121508.pcd  metadata.json  metadata_20260130_080908.json  metadata_20260130_121506.json  sonar_map.pcd
seabed_to_sky/ros2_ws/src/spark-fast-lio/sonar_map/: CMakeLists.txt  package.xml
seabed_to_sky/ros2_ws/src/spark-fast-lio/sonar_map/config/: sonar.yaml
seabed_to_sky/ros2_ws/src/spark-fast-lio/sonar_map/launch/: norbit_mapping.launch.py  sonar_mapping.launch.py
seabed_to_sky/ros2_ws/src/spark-fast-lio/sonar_map/src/: norbit_map_NED.py  norbit_map_ned.py  norbit_scan_NED.py  norbit_scan_ned.py  save_map.py  sonar_map_NED.py  sonar_map_ned.py  sonar_map_ned_old.py  sonar_scan_NED.py  sonar_scan_ned.py
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/: CMakeLists.txt  package.xml
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/config/: ouster_os1.yaml  ouster_os2.yaml  seabed_to_sky.yaml
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/include/: preprocess.h  spark_fast_lio.h
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/launch/: os1.launch.yaml  os2.launch.yaml
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/rviz/: ouster_vbr.rviz
seabed_to_sky/ros2_ws/src/spark-fast-lio/spark_fast_lio/src/: preprocess.cpp  spark_fast_lio.cpp
seabed_to_sky/ros2_ws/src/spark-fast-lio/src/: merge_plc.py
seabed_to_sky/ros2_ws/src/tf_static_publisher/: CMakeLists.txt  package.xml
seabed_to_sky/ros2_ws/src/tf_static_publisher/config/: transforms.yaml
seabed_to_sky/ros2_ws/src/tf_static_publisher/launch/: tf_static_launch.py
seabed_to_sky/ros2_ws/src/tf_static_publisher/src/: tf_publisher.cpp
src/analysis/data_availability/: mcap_timeline.py
src/analysis/gps/: gps_handler.py  gps_nmea_read.py  gps_path_mapper.py
src/analysis/gps/csvs/: gps_data_2024-04-29_10-55-48.csv
src/analysis/imu/: imu_norm.py  imu_norm_plot.ipynb
src/analysis/path/: extract_path.py
src/analysis/path/csvs/config1/: path_config1.csv
src/post_process/pcl/: README.md  merge_pcl.py
src/post_process/pcl/configs/: config1.yaml  config1_5.yaml
src/post_process/tfs/: mcap_tf.py  tf_handler.py
src/post_process/tfs/configs/: tfs_config_2024_04_08_1.yaml  tfs_config_2024_04_08_1_5.yaml
tests/: octomap.ipynb
