<?xml version="1.0"?>
<package format="3">
  <name>apl_msgs</name>
  <version>0.0.0</version>
  <description>The apl_msgs package</description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>
  <license>BSD-3-clause</license>

  <!-- Stefano Suman and Ian Vaughn at WHOI wrote the original RawData.msg -->
  <author email="lindzey@uw.edu">Laura Lindzey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>